--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
                 <div class="footer-brand">
                     <img src="{{ '/assets/images/wild-imagination-logo.jpg' | relative_url }}" alt="{{ site.title }}" class="footer-logo">
                     <div class="footer-text">
-                        <p>&copy; {{ 'now' | date: "%Y" }} {{ site.title }}. All rights reserved.</p>
+                        <p id="copyright">&copy; <span id="copyright-year">{{ 'now' | date: "%Y" }}</span> {{ site.title }}. All rights reserved.</p>
                         <p>Growing stories, nurturing dreams</p>
                         <p>Questions? Email us at <a href="mailto:contact@wildimaginationpress.com">contact@wildimaginationpress.com</a></p>
                         <p class="footer-privacy"><a href="{{ '/privacy/' | relative_url }}">Privacy Policy</a></p>
